fix(projects): make project apply button more readable

--- a/brasilcomvc/projects/static/styl/res-common/project-details.styl
+++ b/brasilcomvc/projects/static/styl/res-common/project-details.styl
@@ -34,3 +34,5 @@ body.project-details #main-content
 	section.apply a.button
 		background-color: color_main2_default
 		display: block
+		font-size: 14pt
+		font-weight: 700
